<resources>
    <string name="app_name">Swoosh</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="desired_league">Desired League</string>
    <string name="next">Next</string>
    <string name="men">Men</string>
    <string name="men">Men</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="women">Women</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-ed</string>
    <string name="co_ed">Co-ed</string>
    <string name="co_ed">Co-ed</string>
    <string name="backgound_1">backgound_1</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="background_2">background_2</string>
    <string name="i_am_a">I am a :</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="beginner">BEGINNER</string>
    <string name="beginner">BEGINNER</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="baller">BALLER</string>
    <string name="baller">BALLER</string>
    <string name="finish">Finish</string>
</resources>
